// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > locations > components > StoreListSearch should call getProductLocations with a postal code after filling the input and pressing enter 1`] = `
<StoreListSearch
  getProductLocations={
    [MockFunction] {
      "calls": Array [
        Array [
          "ABC123",
          Object {
            "countryCode": "DE",
            "postalCode": "ACME",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  search={
    Object {
      "countryCode": "DE",
    }
  }
  storeSearch={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "countryCode": "DE",
          },
        ],
        Array [
          Object {
            "countryCode": "DE",
            "postalCode": "ACME",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className={
      Object {
        "data-css-z3aef1": "",
      }
    }
  >
    <Grid>
      <Grid.Item
        className="css-bpbkyq"
        grow={1}
      >
        <span
          aria-hidden={true}
          className={
            Object {
              "data-css-gy1p1e": "",
            }
          }
        >
          <MagnifierIcon />
        </span>
        <input
          autoComplete="off"
          autoCorrect="off"
          className={
            Object {
              "data-css-2h0g54": "",
            }
          }
          disabled={true}
          name="postalCode"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="locations.search_placeholder"
          type="search"
          value="ACME"
        />
        <button
          className={
            Object {
              "data-css-gy1p1e": "",
            }
          }
          onClick={[Function]}
          type="button"
        >
          <LocatorIcon />
        </button>
      </Grid.Item>
      <Grid.Item
        className="css-1o3o127"
        shrink={0}
      >
        <div
          className={
            Object {
              "data-css-1hrnuet": "",
            }
          }
        >
          <select
            className={
              Object {
                "data-css-92k9yt": "",
              }
            }
            name="countryCode"
            onChange={[Function]}
            value="DE"
          >
            <option
              className="option"
              key="DE"
              value="DE"
            >
              Germany
            </option>
            <option
              className="option"
              key="US"
              value="US"
            >
              United States
            </option>
          </select>
        </div>
      </Grid.Item>
    </Grid>
  </div>
  <div
    className={
      Object {
        "data-css-13azwyo": "",
      }
    }
  >
    <ProgressBar
      isVisible={true}
    />
  </div>
</StoreListSearch>
`;

exports[`engage > locations > components > StoreListSearch should render as expected 1`] = `
<Fragment>
  <div
    className={
      Object {
        "data-css-z3aef1": "",
      }
    }
  >
    <Grid>
      <Grid.Item
        className="css-bpbkyq"
        grow={1}
      >
        <span
          aria-hidden={true}
          className={
            Object {
              "data-css-gy1p1e": "",
            }
          }
        >
          <MagnifierIcon />
        </span>
        <input
          autoComplete="off"
          autoCorrect="off"
          className={
            Object {
              "data-css-2h0g54": "",
            }
          }
          disabled={false}
          name="postalCode"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="locations.search_placeholder"
          type="search"
          value=""
        />
        <button
          className={
            Object {
              "data-css-gy1p1e": "",
            }
          }
          onClick={[Function]}
          type="button"
        >
          <LocatorIcon />
        </button>
      </Grid.Item>
      <Grid.Item
        className="css-1o3o127"
        shrink={0}
      >
        <div
          className={
            Object {
              "data-css-1hrnuet": "",
            }
          }
        >
          <select
            className={
              Object {
                "data-css-92k9yt": "",
              }
            }
            name="countryCode"
            onChange={[Function]}
            value="DE"
          >
            <option
              className="option"
              key="DE"
              value="DE"
            >
              Germany
            </option>
            <option
              className="option"
              key="US"
              value="US"
            >
              United States
            </option>
          </select>
        </div>
      </Grid.Item>
    </Grid>
  </div>
  <div
    className={
      Object {
        "data-css-13azwyo": "",
      }
    }
  >
    <ProgressBar
      isVisible={false}
    />
  </div>
</Fragment>
`;
